--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,40 @@
     padding-right: 15px;
 }
 
+.header__user-areaTop{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.header__user-areaLangs{
+    margin-left: 17px;
+}
+
+.header__user-areaLangsItem{
+    font-size: 12px;
+    color: #4D4D4D!important;
+    display: inline-block;
+}
+
+.header__user-areaLangsItem_active{
+    text-decoration: underline;
+}
+
+.header__user-areaLangsItem:not(:last-child){
+    padding-right: 12px;
+    position: relative;
+}
+
+.header__user-areaLangsItem:not(:last-child):after{
+    content: '|';
+    position: absolute;
+    right: 0;
+    display: block;
+    top: 0;
+}
+
 .fmc-billboard__content{
     padding-left: calc(50% - 800px);
     padding-right: calc(50% - 800px);
